--- a/shalimova/sw-shalimova-core_1.cfg
+++ b/shalimova/sw-shalimova-core_1.cfg
@@ -1,7 +1,3 @@
-!<stackingDB>00</stackingDB>
-!<stackingMac>01_34-ef-b6-46-c2-3b_15</stackingMac>
-!
-
 !
 
 !
@@ -233,7 +229,7 @@ interface ethernet 1/25
  rate-limit output 10000000
  no rate-limit output
  switchport mode trunk
- switchport allowed vlan add 300,501,503-504,811 tagged
+ switchport allowed vlan add 300,501,504,811 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
  
