--- a/shalimova/sw-shalimova-69b.cfg
+++ b/shalimova/sw-shalimova-69b.cfg
@@ -9,7 +9,7 @@ clock timezone UTC hour 2 minute 0 after-utc
 ntp client
 ntp server 10.1.3.1
 !
-snmp-server location sofiya
+snmp-server location Sofiivska Borschahivka
 snmp-server contact asusgrin@gmail.com
 !
 !
