--- a/petrovskiy/sw-petrovskiy-core_1.cfg
+++ b/petrovskiy/sw-petrovskiy-core_1.cfg
@@ -1,14 +1,14 @@
 !
 
 !
-sntp server 10.1.3.1
+sntp server 10.1.4.1
 sntp client
 sntp poll 180
 clock timezone-predefined GMT+0200-Helsinki,Kyiv,Riga,Sofia,Tallinn,Vilnius
 !
 !
 hostname users_core_1
-snmp-server location Sofiivska Borschahivka
+snmp-server location Petrovskiy
 snmp-server contact asusgrin@gmail.com
 !
 !
@@ -39,9 +39,8 @@ enable password 7 1b3231655cebb7a1f783eddf27d254ca
 !
 vlan database
  VLAN 1 name DefaultVlan media ethernet
- VLAN 300 name shalimova300 media ethernet
- VLAN 503 name sw503 media ethernet
- VLAN 811 name olt_ext811 media ethernet
+ VLAN 311 name petrovskiy311 media ethernet
+ VLAN 504 name sw504 media ethernet
  
 !
 !
@@ -80,156 +79,156 @@ vlan database
 !
 interface ethernet 1/1
  switchport mode trunk
- switchport allowed vlan add 300,501,504,811 tagged
+ switchport allowed vlan add 311,501,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/2
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/3
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/4
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/5
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/6
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/7
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/8
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/9
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/10
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/11
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/12
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/13
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/14
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/15
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/16
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/17
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/18
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/19
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/20
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/21
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/22
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/23
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/24
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/25
- description uplink-mikrotik
+ description uplink
  rate-limit input 10000000
  no rate-limit input
  rate-limit output 10000000
  no rate-limit output
  switchport mode trunk
- switchport allowed vlan add 300,503 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
  
@@ -237,7 +236,7 @@ interface ethernet 1/25
 interface ethernet 1/26
  no negotiation
  switchport mode trunk
- switchport allowed vlan add 300,503 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
  
@@ -245,7 +244,7 @@ interface ethernet 1/26
 interface ethernet 1/27
  no negotiation
  switchport mode trunk
- switchport allowed vlan add 300,503 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
  
@@ -253,7 +252,7 @@ interface ethernet 1/27
 interface ethernet 1/28
  no negotiation
  switchport mode trunk
- switchport allowed vlan add 300,503 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
  
@@ -264,8 +263,8 @@ interface ethernet 1/28
 control-plane
 !
 !
-interface vlan 503
- ip address 10.1.3.3 255.255.255.0
+interface vlan 504
+ ip address 10.1.4.2 255.255.255.0
 !
 !
 !
@@ -285,7 +284,7 @@ no ip http server
 no ip http secure-server
 !
 !
-ip route 0.0.0.0 0.0.0.0 10.1.3.1
+ip route 0.0.0.0 0.0.0.0 10.1.4.1
 !
 !
 !
@@ -327,7 +326,7 @@ ip route 0.0.0.0 0.0.0.0 10.1.3.1
 !
 !
 !
-interface vlan 503
+interface vlan 504
 !
 !
 !
