--- a/petrovskiy/sw-petrovskiy-core_1.cfg
+++ b/petrovskiy/sw-petrovskiy-core_1.cfg
@@ -26,11 +26,11 @@ snmp-server community billing ro
 !
 no username admin 
 no username guest 
-username test access-level 15
-username grin password 0 test
 username grin access-level 15
 username grin password 7 ab90a6013256be5cc2dcfc7770174ae7
-enable password 7 1b3231655cebb7a1f783eddf27d254ca
+username service access-level 15
+username service password 7 8efdd10756595e9a58dc3d7fee6f53ee
+enable password level 15 7 1b3231655cebb7a1f783eddf27d254ca
 !
 !
 !
@@ -39,6 +39,8 @@ enable password 7 1b3231655cebb7a1f783eddf27d254ca
 !
 vlan database
  VLAN 1 name DefaultVlan media ethernet
+ VLAN 111 name SCD media ethernet state active
+ VLAN 112 name Video media ethernet state active
  VLAN 311 name petrovskiy311 media ethernet
  VLAN 504 name sw504 media ethernet
  
@@ -79,7 +81,7 @@ vlan database
 !
 interface ethernet 1/1
  switchport mode trunk
- switchport allowed vlan add 311,501,504 tagged
+ switchport allowed vlan add 311,504 tagged
  switchport allowed vlan remove 1
  
 !
