--- a/shalimova/10.1.3.3_sw-shalimova-core_1.cfg
+++ b/shalimova/10.1.3.3_sw-shalimova-core_1.cfg
@@ -7,7 +7,7 @@ sntp poll 180
 clock timezone-predefined GMT+0200-Helsinki,Kyiv,Riga,Sofia,Tallinn,Vilnius
 !
 !
-hostname users_core_1
+hostname users_shalimova_core
 snmp-server location Sofiivska Borschahivka
 snmp-server contact asusgrin@gmail.com
 !
@@ -26,11 +26,11 @@ snmp-server community billing ro
 !
 no username admin 
 no username guest 
-username test access-level 15
-username grin password 0 test
 username grin access-level 15
 username grin password 7 ab90a6013256be5cc2dcfc7770174ae7
-enable password 7 1b3231655cebb7a1f783eddf27d254ca
+username service access-level 15
+username service password 7 8efdd10756595e9a58dc3d7fee6f53ee
+enable password level 15 7 1b3231655cebb7a1f783eddf27d254ca
 !
 !
 !
@@ -39,9 +39,10 @@ enable password 7 1b3231655cebb7a1f783eddf27d254ca
 !
 vlan database
  VLAN 1 name DefaultVlan media ethernet
+ VLAN 111 name SCD media ethernet state active
+ VLAN 112 name Video media ethernet state active
  VLAN 300 name shalimova300 media ethernet
  VLAN 503 name sw503 media ethernet
- VLAN 811 name olt_ext811 media ethernet
  
 !
 !
@@ -80,156 +81,152 @@ vlan database
 !
 interface ethernet 1/1
  switchport mode trunk
- switchport allowed vlan add 300,501,504,811 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/2
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/3
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/4
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/5
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/6
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/7
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/8
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/9
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/10
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/11
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/12
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/13
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/14
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/15
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/16
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/17
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/18
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/19
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/20
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/21
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/22
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/23
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/24
  switchport mode trunk
- switchport allowed vlan add 300,504 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  
 !
 interface ethernet 1/25
  description uplink-mikrotik
- rate-limit input 10000000
- no rate-limit input
- rate-limit output 10000000
- no rate-limit output
  switchport mode trunk
- switchport allowed vlan add 300,503 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
  
@@ -237,7 +234,7 @@ interface ethernet 1/25
 interface ethernet 1/26
  no negotiation
  switchport mode trunk
- switchport allowed vlan add 300,503 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
  
@@ -245,7 +242,7 @@ interface ethernet 1/26
 interface ethernet 1/27
  no negotiation
  switchport mode trunk
- switchport allowed vlan add 300,503 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
  
@@ -253,7 +250,7 @@ interface ethernet 1/27
 interface ethernet 1/28
  no negotiation
  switchport mode trunk
- switchport allowed vlan add 300,503 tagged
+ switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
  
