--- a/shalimova/10.1.3.11_sw-shalimova-69b.cfg
+++ b/shalimova/10.1.3.11_sw-shalimova-69b.cfg
@@ -360,27 +360,39 @@ interface ethernet 1/25
 !
 interface ethernet 1/26
  no spanning-tree loopback-detection
- switchport l2protocol-tunnel lldp
- ip dhcp snooping trust
- switchport allowed vlan add 1 untagged
- switchport allowed vlan add 1,503,300 tagged
- switchport mode trunk
+ port security max-mac-count 5
+ switchport broadcast packet-rate 1024
+ switchport allowed vlan add 300 untagged
+ switchport native vlan 300
+ switchport allowed vlan remove 1
+ switchport mode access
+ spanning-tree bpdu-filter
+ loopback-detection
+
 !
 interface ethernet 1/27
  no spanning-tree loopback-detection
- switchport l2protocol-tunnel lldp
- ip dhcp snooping trust
- switchport allowed vlan add 1 untagged
- switchport allowed vlan add 1,503,300 tagged
- switchport mode trunk
+ port security max-mac-count 5
+ switchport broadcast packet-rate 1024
+ switchport allowed vlan add 300 untagged
+ switchport native vlan 300
+ switchport allowed vlan remove 1
+ switchport mode access
+ spanning-tree bpdu-filter
+ loopback-detection
+
 !
 interface ethernet 1/28
  no spanning-tree loopback-detection
- switchport l2protocol-tunnel lldp
- ip dhcp snooping trust
- switchport allowed vlan add 1 untagged
- switchport allowed vlan add 1,503,300 tagged
- switchport mode trunk
+ port security max-mac-count 5
+ switchport broadcast packet-rate 1024
+ switchport allowed vlan add 300 untagged
+ switchport native vlan 300
+ switchport allowed vlan remove 1
+ switchport mode access
+ spanning-tree bpdu-filter
+ loopback-detection
+
 !
 !
 !
