--- a/shalimova/10.1.3.15_sw-shalimova-69-p-1-1.cfg
+++ b/shalimova/10.1.3.15_sw-shalimova-69-p-1-1.cfg
@@ -1,6 +1,6 @@
 !
 !
-hostname sw-shalimova-59-p2-1
+hostname sw-shalimova-69-1-1
 
 sntp server 10.1.3.1 0.0.0.0 0.0.0.0
 !
@@ -82,7 +82,7 @@ ip dhcp snooping vlan 300
 !
 interface vlan 1
 interface vlan 503
- ip address 10.1.3.21 255.255.255.0
+ ip address 10.1.3.15 255.255.255.0
 interface vlan 300
 !
 !
