--- a/shalimova/10.1.3.3_sw-shalimova-core_1.cfg
+++ b/shalimova/10.1.3.3_sw-shalimova-core_1.cfg
@@ -7,10 +7,11 @@ sntp poll 180
 clock timezone-predefined GMT+0200-Helsinki,Kyiv,Riga,Sofia,Tallinn,Vilnius
 !
 !
-hostname users_shalimova_core
-snmp-server location Sofiivska Borschahivka
+hostname servers_core
+snmp-server location "Zhk Sofiyivskyy Kvartal"
 snmp-server contact asusgrin@gmail.com
 !
+jumbo frame
 !
 !
 !
@@ -18,19 +19,24 @@ snmp-server contact asusgrin@gmail.com
 !
 !
 !
+dos-protection land
+dos-protection tcp-null-scan
+dos-protection tcp-syn-fin-scan
+dos-protection tcp-xmas-scan
 !
 !
 snmp-server community billing ro
 !
 !
 !
-no username admin 
-no username guest 
+username primyk access-level 15
+username primyk password 7 37c89873ccf4afdc8039033090d5126c
+no username admin
+no username guest
 username grin access-level 15
 username grin password 7 ab90a6013256be5cc2dcfc7770174ae7
-username service access-level 15
-username service password 7 8efdd10756595e9a58dc3d7fee6f53ee
-enable password level 15 7 1b3231655cebb7a1f783eddf27d254ca
+enable password 7 1b3231655cebb7a1f783eddf27d254ca
+!
 !
 !
 !
@@ -39,11 +45,26 @@ enable password level 15 7 1b3231655cebb7a1f783eddf27d254ca
 !
 vlan database
  VLAN 1 name DefaultVlan media ethernet
- VLAN 111 name SCD media ethernet state active
- VLAN 112 name Video media ethernet state active
+ VLAN 100 name ControlPower media ethernet
+ VLAN 111 name SCD media ethernet
+ VLAN 112 name Video media ethernet
+ VLAN 113 name Secuity media ethernet
  VLAN 300 name shalimova300 media ethernet
+ VLAN 311 name livivskiy311 media ethernet
+ VLAN 312 name lvivskiy312 media ethernet
+ VLAN 313 name lvivskiy313 media ethernet
+ VLAN 314 name lvivskiy314 media ethernet
  VLAN 503 name sw503 media ethernet
- 
+ VLAN 504 name sw504 media ethernet
+ VLAN 800 name OmoVlan media ethernet
+ VLAN 801 name IN_CORBINA_L9 media ethernet
+ VLAN 811 name DaniyaExt811 media ethernet
+ VLAN 2337 name EuroCity-LobanV2337 media ethernet
+ VLAN 2340 name BGNET-BGP-uplink media ethernet
+ VLAN 2354 name Lu62sw2354 media ethernet
+ vlan 200,360,555,560,601,617,2457,2584-2587 media ethernet
+!
+!
 !
 !
 !
@@ -80,189 +101,228 @@ vlan database
 !
 !
 interface ethernet 1/1
+ description Zodchih_34_a
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 200,360,560 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/2
+ description bdcom_lvivskiy
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 311-312,503-504 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/3
+ description c-data_daniya
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 112,503,811 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/4
+ description oneHouse
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 100,601,800,2354 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/5
+ description 10.1.3.11
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/6
+ description 10.1.3.12
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-112,300,503,800 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/7
+ description 10.1.3.13
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/8
+ description 10.1.3.16
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/9
+ description 10.1.3.17
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/10
+ description 10.1.3.15
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/11
+ description sw-shalimova-67-1-1
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/12
+ description sw-shalimova-63a-1-1
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/13
+ description sw-shalimova-65a-1-1
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/14
+ description sw-shalimova-61a-1-1
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/15
+ description sw-shalimova-63-1-1
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/16
+ description sw-shalimova-65-1-1
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/17
  switchport mode trunk
  switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/18
+ description sw-shalimova-59-1-1
  switchport mode trunk
  switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/19
+ description sw-shalimova-59-p2-1
  switchport mode trunk
  switchport allowed vlan add 111-112,300,503 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/20
- switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ description c-data_kyivskiy_kv
+ switchport allowed vlan add 503,811 tagged
  switchport allowed vlan remove 1
- 
+ spanning-tree spanning-disabled
+ switchport l2protocol-tunnel lldp
+
 !
 interface ethernet 1/21
+ description server-1
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 200 tagged
  switchport allowed vlan remove 1
- 
+ spanning-tree spanning-disabled
+
 !
 interface ethernet 1/22
+ description server-2
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 200 tagged
  switchport allowed vlan remove 1
- 
+ spanning-tree spanning-disabled
+
 !
 interface ethernet 1/23
+ media-type sfp-forced
+ description in-eurolan_sofiya_mol
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 2584 tagged
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/24
- switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ description Router_inet
+ switchport allowed vlan add 100 untagged
+ switchport mode access
+ switchport native vlan 100
  switchport allowed vlan remove 1
- 
+
 !
 interface ethernet 1/25
- description uplink-mikrotik
+ description in_corbina_l9
+ no negotiation
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 801 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
- 
+
 !
 interface ethernet 1/26
+ media-type sfp-forced
+ description mikrotik1036
  no negotiation
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
- switchport allowed vlan remove 1
+ switchport allowed vlan add 1,100,111-112,200,300,311-314,360,503-504,555,560,6
+01,617,800-801,811,2337,2340,2354,2457,2584-2587 tagged
+ no spanning-tree port-bpdu-flooding
  spanning-tree spanning-disabled
- 
+
 !
 interface ethernet 1/27
+ description promenada
  no negotiation
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 100,601,800,2354 tagged
  switchport allowed vlan remove 1
  spanning-tree spanning-disabled
- 
+
 !
 interface ethernet 1/28
+ media-type sfp-forced
+ description sw-shalimova-core-2
  no negotiation
  switchport mode trunk
- switchport allowed vlan add 111-112,300,503 tagged
+ switchport allowed vlan add 111-113,200,300,311-314,503-504,811,2337,2340,2585-
+2587 tagged
  switchport allowed vlan remove 1
- spanning-tree spanning-disabled
- 
+
 !
 !
 !
 !
-control-plane
 !
+interface vlan 1
+ ip address dhcp
 !
 interface vlan 503
- ip address 10.1.3.3 255.255.255.0
+ ip address 10.1.3.2 255.255.255.0
+!
+interface vlan 555
+ ip address 10.55.55.2 255.255.255.0
 !
 !
 !
@@ -296,6 +356,7 @@ ip route 0.0.0.0 0.0.0.0 10.1.3.1
 !
 !
 !
+ip ssh server
 !
 !
 !
@@ -319,16 +380,11 @@ ip route 0.0.0.0 0.0.0.0 10.1.3.1
 !
 !
 !
-!
-!
-!
-!
+interface vlan 1
 !
 interface vlan 503
 !
-!
-!
-!
+interface vlan 555
 !
 !
 !
